Mon Jun 12 14:04:00 BST 2000  Olly Betts

	* Added a NEWS file and removed "foreign" from Makefile.am-s

Mon Jun 12 13:00:00 BST 2000  Olly Betts

	* configure.in: Changed explicit use of echo to AC_MSG_xxx()

Mon Jun 12 12:32:00 BST 2000  Olly Betts

	* tests/stemtest.pl.in: Use -s instead of stat to find filesize
	(more readable)

Mon Jun 12 12:20:18 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Document the intended purpose of the debug message types, and
	  make the expand code emit typed debug messages.

Mon Jun 12 12:10:00 BST 2000  Olly Betts
	
	* Probe for -Wno-long-long with C compiler as well as C++ compiler

Fri Jun  9 17:51:16 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Added lock() and unlock() methods to databases.

	* Added LOCK and API debug types.

	* Added new exception: OmDatabaseLockError.

	* Added type for timeout times: om_timeout.

Fri Jun  9 16:09:43 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Stemming interface working with tcl8, and guile (but with some
	  tweaks to the generated code.).

Thu Jun  8 18:59:55 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Initial guile bits.  (Not yet functional)

Thu Jun  8 16:28:07 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Perl5 and Python now both have more-or-less working OmQuery
	  interface.
	
	* Both interfaces can be built from the Makefiles (still more work
	  getting it working properly with automake and autoconf.
	
	* The "perl" directory has been renamed to "perl5".

Thu Jun  8 14:43:51 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Create an OmDebug object to manage debug messages.  This allows
	  the level of debug message to be selected and the output file for
	  debug messages to be set using OM_DEBUG_FILE and OM_DEBUG_TYPES
	  environment variables.

Thu Jun  8 11:32:11 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Removed some warnings from BackendManager.
