@@ -1,3 +1,7 @@
+Mon Jun 12 15:37:45 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>
+
+	* Fixed an assertion in inmemory with no documents.
+
 Mon Jun 12 14:04:00 BST 2000  Olly Betts
 
 	* Added a NEWS file and removed "foreign" from Makefile.am-s
